<resources>
    <string name="app_name">Object Viewer</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="roll_no">Roll No.</string>
    <string name="phone_no">Phone No.</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="roll_No">Roll No</string>
    <string name="phone_No">Phone No</string>
    <string name="name_">Name</string>
</resources>